# bybit-mcp

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: mandate.example.json  opencode.json
src/bybit_mcp/: __init__.py
src/bybit_mcp/client/: __init__.py  auth.py  enums.py  models.py  rest.py
src/bybit_mcp/safety/: __init__.py  audit.py  daily_count.py  extractors.py  guard.py  halt.py  mandate.py  paths.py  redaction.py
src/bybit_mcp/server/: __init__.py  mcp_server.py  state.py  tools_account.py  tools_market.py  tools_order.py
tests/: conftest.py  test_audit.py  test_auth.py  test_client.py  test_daily_count.py  test_extractors.py  test_guard.py  test_halt.py  test_mandate.py  test_paths.py  test_redaction.py  test_server.py
